--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
             <version>2.8.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>pl.pragmatists</groupId>
+            <artifactId>JUnitParams</artifactId>
+            <version>1.1.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
